* cookies created are flagged as "secure"
* CORS: to make your app CORSable use `de.businesscode.bcdui.web.filters.ShiroFilter` as a replacement of `org.apache.shiro.web.servlet.ShiroFilter` and add `de.businesscode.bcdui.web.filters.CorsFilter` as a first in the chain and cover resources which should be available to CORS, or set it to `/*` to enable for the whole site.

.Client:
* Login Widget to be used in login-pages, i.e. via `<bcd-loginng>` custom tag
* new dataprovider options tblSelect, tblSelectRow, tblUpdate, tblInsert, tblDelete which offers wrs -> object -> wrs functions (currently limited to wrs)
* added bcdui.bcdAlerter (.info/.warn/.error) to show a slide in alert
* autogrow attribute for textarea widget
.Security:
.Development:
.Bugfixes:

.Incompatibilities:
* In SQLEngine::transform '-' postfix needs to be converted to '\_' to omit table alias like `INSERT INTO $t.painTableName ($t.colName_) VALUES (1)`
* Removal of Internet Explorer support
* javax to jakarta switch (for several packages e.g. javax.servlet)
* new 3rd party jars set
* cookies created are flagged as "secure", requiring https

___
==== Release 5_6_0

.Major new features:
** Added support for joins, CTEs, set operators and sub-selects to Wrq
** SubjectPreferences for user-chosen SubjectSettings
** Api stubs for JavaScript auto-suggest and inline help in IDEs
** Fully supporting MySQL and Redshift now
** Security improvements

.Server:
* Wrq does support CTE common table expressions, joins and unions now
* Extend SQL analytical functions in Wrq
* Added CASE WHEN and comparision operators to Wrq
* Allow client sided setting of subject preferences via SubjectPreferences servlet and SubjectPreferencesRealm, using config from bcdui/conf/subjectPreferences.xml
* Introduced UserSettingsDefaults to subjectSettings.xml to specify user default permissions (add de.businesscode.bcdui.subjectsettings.SubjectPreferencesRealm to your realms)