@@ -207,6 +207,11 @@
           </xs:attribute>
         </xs:complexType>
       </xs:element>
+      <xs:element name="Description" type="xs:string" minOccurs="0" maxOccurs="1">
+        <xs:annotation><xs:documentation>
+          A text describing the binding item.
+        </xs:documentation></xs:annotation>
+      </xs:element>
     </xs:sequence>
 
     <!-- wrs:C attributes -->
